--- a/express-render-main/views/index.ejs
+++ b/express-render-main/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('./partials/header') %>
 
-<h2>Shelfie</h2>
+<title><%= title %></title>
+
 <div>
   <p>Sign in to access your board game collection:</p>
   <form action="/login" method="POST">
