--- a/express-render-main/views/partials/header.ejs
+++ b/express-render-main/views/partials/header.ejs
@@ -8,12 +8,35 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <!-- Maybe add Bootstrap JS -->
-  <title>Shelfie</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <title><%= title %></title>
 </head>
 <body>
+  <body>
+    <!-- Banner area -->
+    <div class="banner">
+      <h1><%= title %></h1>
+    </div>
   <header>
-    <nav>
-      <!-- Navigation links -->
+            <!-- Bootstrap JS -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <!-- Navbar toggle button for smaller screens -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/boardgames">Collections</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/boardgames/add">Add Board Game</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
   <main>
