Creating individual board game views

--- a/express-render-main/views/boardgames/add.ejs
+++ b/express-render-main/views/boardgames/add.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/header', { showBanner: false }) %>
 
 <form action="/boardgames/add" method="POST" enctype="multipart/form-data"> <!-- support file uploads -->
   <div class="mb-3"> <!-- bootstrap styling -->
