--- a/express-render-main/views/partials/header.ejs
+++ b/express-render-main/views/partials/header.ejs
@@ -12,13 +12,18 @@
   <title><%= title %></title>
 </head>
 <body>
-  <body>
-    <!-- Banner area -->
+  <% if (showBanner) { %>
+    <div class="banner">
+      <img src="/uploads/<%= bannerImage %>" alt="<%= title %> Image" class="banner-image">
+    </div>
+  <% } else { %>
     <div class="banner">
       <h1><%= title %></h1>
     </div>
+  <% } %>
+
   <header>
-            <!-- Bootstrap JS -->
+    <!-- Bootstrap JS -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <!-- Navbar toggle button for smaller screens -->
