--- a/express-render-main/views/boardgames/index.ejs
+++ b/express-render-main/views/boardgames/index.ejs
@@ -1,18 +1,34 @@
 <%- include('../partials/header', { title: "Board Game Collection", showBanner: false }) %>
 
-<% if (boardGames.length > 0) { %>
-  <div class="card-container">
+<%- include('../partials/navbar') %>
+
+<form action="/boardgames" method="GET">
+  <label for="playerCount">Player Count:</label>
+  <input type="number" id="playerCount" name="playerCount">
+
+  <label for="genre">Genre:</label>
+  <input type="text" id="genre" name="genre">
+
+  <button type="submit">Filter</button>
+</form>
+
+<div class="card-container">
+  <% if (boardGames.length > 0) { %>
     <% boardGames.forEach(game => { %>
       <div class="card">
-        <a href="/boardgames/<%= game._id %>"> <!-- Add this line to create a link to the show page -->
-          <img src="/uploads/<%= game.image %>" alt="<%= game.title %> Image">
-          <h3><%= game.title %></h3>
+        <a href="/boardgames/<%= game._id %>">
+          <div class="card-image">
+            <img src="/uploads/<%= game.image %>" alt="<%= game.title %> Image">
+            <div class="image-title">
+              <h3><%= game.title %></h3>
+            </div>
+          </div>
         </a>
       </div>
     <% }); %>
   </div>
-<% } else { %>
-  <p>No board games available.</p>
-<% } %>
+  <% } else { %>
+    <p>No board games available.</p>
+  <% } %>
 
-<%- include('../partials/footer') %>
+  <%- include('../partials/footer') %>
