Add an edit game form and update information

--- a/express-render-main/views/boardgames/index.ejs
+++ b/express-render-main/views/boardgames/index.ejs
@@ -6,8 +6,11 @@
   <label for="playerCount">Player Count:</label>
   <input type="number" id="playerCount" name="playerCount">
 
-  <label for="genre">Genre:</label>
-  <input type="text" id="genre" name="genre">
+  <!-- <label for="genre">Genre:</label>
+  <input type="text" id="genre" name="genre"> -->
+
+  <label for="mechanics">Mechanics:</label>
+  <input type="text" id="mechanics" name="genre">
 
   <button type="submit">Filter</button>
 </form>
