--- a/express-render-main/views/boardgames/show.ejs
+++ b/express-render-main/views/boardgames/show.ejs
@@ -10,4 +10,7 @@
   <p><strong>Mechanics:</strong> <%= game.mechanics.join(', ') %></p>
 </div>
 
+<a href="/boardgames/<%= game._id %>/edit">Edit</a>
+</div>
+
 <%- include('../partials/footer') %>
