--- a/express-render-main/views/partials/navbar.ejs
+++ b/express-render-main/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/boardgames">Collections</a>
+          <a class="nav-link" href="/boardgames">Collection</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/boardgames/add">Add Board Game</a>
