--- a/express-render-main/views/partials/navbar.ejs
+++ b/express-render-main/views/partials/navbar.ejs
@@ -1,7 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <!-- Navbar toggle button for smaller screens -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Navbar links -->
@@ -12,6 +20,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/boardgames/add">Add Board Game</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/plays/log">Log Plays</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/plays/playLogs">All Play Logs</a>
         </li>
       </ul>
     </div>
