--- a/express-render-main/views/plays/allPlayLogs.ejs
+++ b/express-render-main/views/plays/allPlayLogs.ejs
@@ -1,13 +1,46 @@
 <%- include('../partials/header', { title: 'All Play Logs', showBanner: false }) %>
 <%- include('../partials/navbar') %>
 
-<h2>All Play Logs</h2>
-<ul>
-  <% playLogs.forEach(playLog => { %>
-    <li>
-      Date: <%= playLog.date %>, Game: <%= playLog.gameId.title %>, Players: <%= playLog.players %>, Notes: <%= playLog.notes %>
-    </li>
-  <% }); %>
-</ul>
+<div class="container all-play-logs">
+  <h2 class="play-logs-title">All Play Logs</h2>
+  <div class="row">
+    <% gameLogs.forEach(playLog => { %>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mb-4"> <!-- Adjusted column classes -->
+      <div class="card play-log-card">
+        <div class="card-header play-log-card-header">
+          <h5 class="card-title play-log-title"><%= playLog.gameId.title %></h5>
+          <small class="text-muted play-log-date"><%= playLog.formattedDate %></small>
+        </div>
+        <div class="card-body play-log-card-body">
+          <h6 class="card-subtitle mb-2 text-muted play-log-players-title">Players:</h6>
+          <ul class="list-unstyled play-log-players-list">
+            <% playLog.players.forEach(player => { %>
+            <li class="play-log-player"><%= player %></li>
+            <% }); %>
+          </ul>
+          <% if (playLog.notes) { %>
+          <button
+            class="btn btn-link toggle-notes play-log-toggle-notes"
+            type="button"
+            data-toggle-target="#notes<%= playLog._id %>"
+          >
+           Notes
+          </button>
+          <div class="collapse<%= playLog.notes ? ' show' : '' %> play-log-notes-collapse" id="notes<%= playLog._id %>">
+            <p class="play-log-notes"><%= playLog.notes %></p>
+          </div>
+          <% } %>
+        </div>
+        <div class="card-footer play-log-card-footer">
+          <a href="#" class="btn btn-primary play-log-edit-button">Edit</a>
+          <a href="#" class="btn btn-danger play-log-delete-button">Delete</a>
+        </div>
+      </div>
+    </div>
+    <% }); %>
+  </div>
+</div>
 
 <%- include('../partials/footer') %>
+
+<script src="/scripts/playLogs.js"></script>
