--- a/express-render-main/views/plays/genericLogForm.ejs
+++ b/express-render-main/views/plays/genericLogForm.ejs
@@ -15,7 +15,7 @@
   <input type="text" id="players" name="players" required />
 
   <label for="notes">Notes:</label>
-  <textarea id="notes" name="notes"></textarea>
+  <textarea id="notes" name="notes" class="form-control pre-wrap" rows="3"></textarea>  
 
   <button type="submit">Log Play</button>
 </form>
