--- a/express-render-main/views/boardgames/edit.ejs
+++ b/express-render-main/views/boardgames/edit.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header', { showBanner: false }) %>
-
 <%- include('../partials/navbar') %>
 
-<h1>Edit Game</h1>
-
-<form action="/boardgames/<%= game._id %>?_method=PUT" method="POST">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <form action="/boardgames/<%= game._id %>?_method=PUT" method="POST">
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
     <input type="text" class="form-control" id="title" name="title" value="<%= game.title %>" required>
@@ -42,5 +42,8 @@
 
   <button type="submit" class="submit-btn">Update Game</button>
 </form>
+</div>
+</div>
+</div>
 
 <%- include('../partials/footer') %>
