--- a/express-render-main/views/boardgames/show.ejs
+++ b/express-render-main/views/boardgames/show.ejs
@@ -11,16 +11,16 @@
   <p><strong>Mechanics:</strong> <%= game.mechanics.join(', ') %></p>
 
   <form action="/boardgames/<%= game._id %>/edit" method="GET">
-    <button type="submit" class="edit-btn">Edit</button>
+    <button type="submit" class="btn btn-primary">Edit</button>
   </form>
 
   <form action="/boardgames/<%= game._id %>/delete" method="POST">
-    <button type="submit">Delete</button>
+    <button type="submit" class="btn btn-danger">Delete</button>
   </form>
 </div>
 <form action="/plays/log" method="GET">
   <input type="hidden" name="title" value="<%= game.title %>">
-  <button type="submit">Log Play</button>
+  <button type="submit" class="btn btn-success">Log Play</button>
 </form>
 
 <% if (playLogs && playLogs.length > 0) { %>
