--- a/express-render-main/views/partials/navbar.ejs
+++ b/express-render-main/views/partials/navbar.ejs
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <!-- Navbar toggle button for smaller screens -->
     <button
       class="navbar-toggler"
       type="button"
@@ -26,6 +25,14 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/plays/playLogs">All Play Logs</a>
+        </li>
+      </ul>
+    </div>
+    <!-- Right-aligned "Sign Out" button -->
+    <div class="ml-auto">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Sign Out</a>
         </li>
       </ul>
     </div>
