--- a/express-render-main/views/partials/footer.ejs
+++ b/express-render-main/views/partials/footer.ejs
@@ -1,6 +1,11 @@
 </main>
 <footer>
+    <button onclick="topFunction()" id="backToTopButton" title="Go to top">Top</button>
+</footer>
 
+<script src="scripts/footer.js"></script>
+</body>
+</html>
 </footer>
 </body>
 </html>
