--- a/express-render-main/public/stylesheets/style.css
+++ b/express-render-main/public/stylesheets/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 .card:hover {
-  border-color: #4caf50; /* Green color on hover */
+  border-color: #0000ff;
 }
 
 .container {
@@ -85,7 +85,7 @@ body {
 }
 
 .banner-title {
-  color: #fff; /* White text */
+  color: #fff;
   text-align: center;
   padding: 20px;
 }
@@ -96,6 +96,47 @@ body {
 
 .pre-wrap {
   white-space: pre-wrap;
+}
+
+footer {
+  background-color: #212529;
+  color: #fff;
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+#backToTopButton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: opacity 0.3s;
+}
+
+#backToTopButton:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+#backToTopButton:focus {
+  outline: none;
+}
+
+.game-details form {
+  margin-bottom: 10px;
+}
+
+.game-details form button {
+  margin-right: 10px;
 }
 
 /* Styles for Log Page */
