--- a/express-render-main/views/plays/genericLogForm.ejs
+++ b/express-render-main/views/plays/genericLogForm.ejs
@@ -19,7 +19,7 @@
   <label for="notes">Notes:</label>
   <textarea id="notes" name="notes" class="form-control pre-wrap" rows="3"></textarea>  
 
-  <button type="button" class="btn btn-primary" type="submit">Log Play</button>
+  <button class="btn btn-primary" type="submit">Log Play</button>
 </form>
 </div>
 </div>
