--- a/express-render-main/views/boardgames/show.ejs
+++ b/express-render-main/views/boardgames/show.ejs
@@ -26,7 +26,7 @@
 
 <% if (playLogs && playLogs.length > 0) { %>
   <h3>Play Logs:</h3>
-  <ul>
+  <ul class="play-log-list">
     <% playLogs.forEach(playLog => { %>
       <li>
         Date: <%= playLog.date %>, Players: <%= playLog.players %>, Notes: <%= playLog.notes %>
@@ -36,5 +36,6 @@
 <% } else { %>
   <p>No play logs available.</p>
 <% } %>
+
 
 <%- include('../partials/footer') %>
