--- a/express-render-main/views/boardgames/edit.ejs
+++ b/express-render-main/views/boardgames/edit.ejs
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <form action="/boardgames/<%= game._id %>?_method=PUT" method="POST">
+      <form action="/boardgames/<%= game._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
     <input type="text" class="form-control" id="title" name="title" value="<%= game.title %>" required>
