fix enctype for edit form, also add new filter option

--- a/express-render-main/views/boardgames/add.ejs
+++ b/express-render-main/views/boardgames/add.ejs
@@ -46,6 +46,15 @@
   <div class="mb-3">
     <label for="mechanics">Game Mechanics (comma-separated):</label>
     <input type="text" id="mechanics" name="mechanics">
+  </div>
+  <div class="mb-3">
+    <label for="ownershipStatus">Collection:</label>
+    <select id="ownershipStatus" name="ownershipStatus" class="form-control">
+      <option value="Personal Collection" selected>Personal Collection</option>
+      <option value="Friends Collection">Friends Collection</option>
+      <option value="Group Collection">Group Collection</option>
+      <option value="Online">Online</option>
+    </select>      
   </div>  
 
   <button type="submit" class="btn btn-primary"">Add Board Game</button>
